--- a/1.Fundamentos HTML/Capgemini.html
+++ b/1.Fundamentos HTML/Capgemini.html
@@ -8,7 +8,10 @@
 
 <body>
 	<header>
-		<img src="./filipe.jpeg" alt="" width="200px"> <!--https://via.placeholder.com/200-->
+		<figure> <!--Semanticamente organiza imagens e outras mídias-->
+			<img src="./filipe.jpeg" alt="foto perfil Filipe" width="200px"> <!--https://via.placeholder.com/200-->
+			<figcaption>Filipe Cayres</figcaption>
+		</figure>
 		<h1>
 			Currículo de Estudos
 			<span>
@@ -45,7 +48,7 @@
 				</li>
 			</ol>
 		</nav>
-	</header>	
+	</header>
 	<main>
 		<header>
 			<h2>
@@ -147,8 +150,10 @@
 		</nav>
 	</aside>
 	<aside id="table">
-		<table border="1">
-			<caption><h4>Horários de estudo</h4></caption>
+		<table>
+			<caption>
+				<h4>Horários de estudo</h4>
+			</caption>
 			<thead>
 				<tr>
 					<th>
@@ -188,8 +193,8 @@
 			<tfoot>
 				<tr>
 					<th>
-						
-					</th>				
+
+					</th>
 					<th>
 						Foco HTML
 					</th>
@@ -206,7 +211,7 @@
 						Foco JS
 					</th>
 				</tr>
-			</tfoot>			
+			</tfoot>
 		</table>
 	</aside>
 	<footer>
