--- a/2.Fundamentos-CSS/1.CSS-Sintaxe-Basico/index.html
+++ b/2.Fundamentos-CSS/1.CSS-Sintaxe-Basico/index.html
@@ -17,13 +17,13 @@
                 Primeiro contato
             </h2>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat laudantium molestiae aspernatur iure labore assumenda! Incidunt, ratione hic saepe voluptatum, error a nisi quia inventore doloremque accusantium exercitationem. Ipsa, tempore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio mollitia aspernatur eum, odio ipsum aliquam quisquam voluptas et, totam quod dolor animi atque enim fugiat expedita illo ipsa, facilis tenetur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis culpa, ut ducimus quidem repellat libero ab autem laborum cupiditate sint quaerat quisquam officia hic facere porro perspiciatis ipsum exercitationem. Nobis?
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat laudantium molestiae aspernatur iure labore assumenda! Incidunt, ratione hic saepe <a href="https://github.com/Filipeck" target="_blank">voluptatum, error </a>a nisi quia inventore doloremque accusantium exercitationem. Ipsa, tempore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio mollitia aspernatur eum, odio ipsum aliquam quisquam voluptas et, totam quod dolor animi atque enim fugiat expedita illo ipsa, facilis tenetur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis <span>culpa, ut ducimus quidem repellat libero ab autem laborum cupiditate sint </span> quaerat quisquam officia hic facere porro perspiciatis ipsum exercitationem. Nobis?
             </p>
             <h2 class="contact-title red-text" id="second-contact">
                 Segundo contato
             </h2>
             <p class="blue-text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat laudantium molestiae aspernatur iure labore assumenda! Incidunt, ratione hic saepe voluptatum, error a nisi quia inventore doloremque accusantium exercitationem. Ipsa, tempore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio mollitia aspernatur eum, odio ipsum aliquam quisquam voluptas et, totam quod dolor animi atque enim fugiat expedita illo ipsa, facilis tenetur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis culpa, ut ducimus quidem repellat libero ab autem laborum cupiditate sint quaerat quisquam officia hic facere porro perspiciatis ipsum exercitationem. Nobis?
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat laudantium molestiae aspernatur iure labore assumenda! Incidunt, ratione hic saepe voluptatum, error a nisi quia inventore doloremque accusantium exercitationem. Ipsa, tempore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio mollitia aspernatur eum, odio ipsum aliquam quisquam voluptas et, totam quod dolor animi atque enim fugiat expedita illo ipsa, facilis tenetur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis culpa, ut ducimus quidem repellat libero ab autem <span>laborum cupiditate sint quaerat quisquam officia hic facere</span> porro perspiciatis ipsum exercitationem. Nobis?
             </p>
         </article>
     </main>
