--- a/3.Javascript_Jquery/5.JQuery/2.Seletores.html
+++ b/3.Javascript_Jquery/5.JQuery/2.Seletores.html
@@ -14,11 +14,25 @@
         //Ao carregar o documento
         $(document).ready(function () {
 
+            //Variáveis
+            var campo = $('input').val();
+            var titulo = $('#titulo').html();
+            var subtitulo = $('.subtitulo').html();
+
+            //Exibir
+            alert(campo);
+            alert(titulo);
+            alert(subtitulo);
+
         });
     </script>
 </head>
 
 <body>
+
+    <input type="text" value="Campo Nome">
+    <h1 id="titulo">Título em H1</h1>
+    <h2 class="subtitulo">Título em H2</h2>
 
 </body>
 
