--- a/Extra-Cursos_Projetos/Color_Pick/index.html
+++ b/Extra-Cursos_Projetos/Color_Pick/index.html
@@ -12,9 +12,9 @@
 <body>
     <h1 class="title">RGB</h1>
     <section id="rgb">
-        <div class="color-box red">RED</div>
-        <div class="color-box green">GREEN</div>
-        <div class="color-box blue">BLUE</div>
+        <div class="color-box red">R(Red)</div>
+        <div class="color-box green">G(Green)</div>
+        <div class="color-box blue">B(Blue)</div>
     </section>
     <div id="field">
         <input type="number" class="input">
