--- a/Extra-Cursos_Projetos/Projetos/2.Projeto-Pagina-Receitas/index.html
+++ b/Extra-Cursos_Projetos/Projetos/2.Projeto-Pagina-Receitas/index.html
@@ -9,6 +9,9 @@
     <title>Página de Receitas</title>
 </head>
 <body>
-    
+    <div id="topo">
+        <img src="./images/logo_tudogostoso.png" alt="Logo Tudo Gostoso">
+    </div>
+    <div id="cabecalho"></div>
 </body>
 </html>
