--- a/Extra-Cursos_Projetos/Projetos/2.Projeto-Pagina-Receitas/index.html
+++ b/Extra-Cursos_Projetos/Projetos/2.Projeto-Pagina-Receitas/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Filipe Cayres">
     <link rel="stylesheet" href="./style.css">
     <title>Página de Receitas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="barra-topo">
