--- a/Extra-Cursos_Projetos/Projetos/2.Projeto-Pagina-Receitas/index.html
+++ b/Extra-Cursos_Projetos/Projetos/2.Projeto-Pagina-Receitas/index.html
@@ -16,7 +16,7 @@
     <div id="cabecalho"></div>
     <div class="conteudo">
         <h1>Bolo de Fubá com Goiabada</h1>
-        <div class="cartao">
+        <div class="cartao ingredientes">
             <h2>Ingredientes</h2>
             <ul class="lista-ingredientes">
                 <li>1 ovo</li>
@@ -33,7 +33,7 @@
                 Comprar ingredientes
             </a>
         </div>
-        <div class="cartao">
+        <div class="cartao preparo">
             <h2>Modo de preparo</h2>
             <ol>
                 <li>Misture no liquidificador o ovo, o leite, o óleo, o açúcar, o fubá e bata bem.</li>
