--- a/Extra-Cursos_Projetos/Projetos/2.Projeto-Pagina-Receitas/index.html
+++ b/Extra-Cursos_Projetos/Projetos/2.Projeto-Pagina-Receitas/index.html
@@ -65,5 +65,9 @@
 
         </div>
     </div>
+
+    <footer class="rodape">
+        <p class="rodape-texto">Encontrous algum problema com esta receita? Por favor entre em contato através do e-mail <a href="mailto:info@tudogostoso.com.br" class="text-white">info@tudogostoso.com.br</a>.</p>
+    </footer>
 </body>
 </html>
