--- a/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
+++ b/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Filipe Cayres">
     <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Qual comprar</title>
 </head>
+
 <body>
     <div class="top-bar">Qual comprar?</div>
+    <main class="container">
+        <header class="header">
+            <h1 class="headline">
+                Os ‘vilões’ da luz: veja o que mais gasta energia e como economizar
+            </h1>
+            <h2>
+                Ar-condicionado, notebook, máquina de lavar e outros eletrodomésticos da sua casa podem pesar na conta
+                de luz no final do mês; veja dicas para usá-los e economizar
+            </h2>
+            <div>
+                <div class="author">
+                    Por Carolina Zanatta, do TechTudo
+                </div>
+                <small>
+                    <sub>
+                        29/01/2022 08h00 Atualizado há 11 meses
+                    </sub>
+                </small>
+            </div>
+            <div class="social-icons">
+                <a href="">
+                    <img src="" alt="">
+                </a>
+                <a href="">
+                    <img src="" alt="">
+                </a>
+                <a href="">
+                    <img src="" alt="">
+                </a>
+            </div>
+        </header>
+    </main>
 </body>
+
 </html>
