--- a/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
+++ b/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
@@ -36,13 +36,13 @@
             </div>
             <div class="social-icons">
                 <a href="">
-                    <img src="" alt="">
+                    <img class="social-icon" src="./images/facebook.png" alt="Facebook">
                 </a>
                 <a href="">
-                    <img src="" alt="">
+                    <img class="social-icon" src="./images/twitter.png" alt="Twitter">
                 </a>
                 <a href="">
-                    <img src="" alt="">
+                    <img class="social-icon" src="./images/whatsapp.png" alt="Whatsapp">
                 </a>
             </div>
         </header>
