--- a/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
+++ b/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
@@ -16,11 +16,11 @@
 <body>
     <div class="top-bar">Qual comprar?</div>
     <main class="container">
-        <header class="header">
+        <header>
             <h1 class="headline">
                 Os ‘vilões’ da luz: veja o que mais gasta energia e como economizar
             </h1>
-            <h2>
+            <h2 class="subtitle">
                 Ar-condicionado, notebook, máquina de lavar e outros eletrodomésticos da sua casa podem pesar na conta
                 de luz no final do mês; veja dicas para usá-los e economizar
             </h2>
