--- a/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
+++ b/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
@@ -28,7 +28,7 @@
                 <div class="author">
                     Por Carolina Zanatta, do TechTudo
                 </div>
-                <small>
+                <small style="font-size: 12px;">
                     <sub>
                         29/01/2022 08h00 Atualizado há 11 meses
                     </sub>
@@ -45,6 +45,7 @@
                     <img class="social-icon" src="./images/whatsapp.png" alt="Whatsapp">
                 </a>
             </div>
+            <hr>
         </header>
     </main>
 </body>
