--- a/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
+++ b/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
@@ -47,6 +47,14 @@
             </div>
             <hr>
         </header>
+        <article class="content">
+            <p>
+                Alguns eletrônicos e eletrodomésticos da sua casa consomem mais energia do que outros. Em 2021, houve um aumento de 20% na conta de luz, e uma tarifa adicional de R$ 14 passou a ser cobrada a cada 100 kWh (Quilowatt-hora, medida de energia) consumidos. Para economizar nos gastos, entender como os dispositivos que você mais usa funcionam, como o ar-condicionado, notebook e máquina de lavar, pode fazer diferença no preço do boleto do fim do mês.
+            </p>
+            <p>
+                Aparelhos que transformam energia elétrica em calor, como geladeiras e chuveiros, são os que mais impactam na conta de luz. No entanto, sem uso consciente, até mesmo itens como computadores e videogames podem pesar no final do mês. Veja a seguir quais são os eletrônicos e eletrodomésticos que mais consomem energia na sua casa. Também conversamos com o coordenador do programa de energia e sustentabilidade do Instituto Brasileiro de Defesa do Consumidor (Idec), Clauber Leite, que deu dicas que vão te ajudar a economizar.
+            </p>
+        </article>
     </main>
 </body>
 
