--- a/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
+++ b/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
@@ -54,6 +54,10 @@
             <p>
                 Aparelhos que transformam energia elétrica em calor, como geladeiras e chuveiros, são os que mais impactam na conta de luz. No entanto, sem uso consciente, até mesmo itens como computadores e videogames podem pesar no final do mês. Veja a seguir quais são os eletrônicos e eletrodomésticos que mais consomem energia na sua casa. Também conversamos com o coordenador do programa de energia e sustentabilidade do Instituto Brasileiro de Defesa do Consumidor (Idec), Clauber Leite, que deu dicas que vão te ajudar a economizar.
             </p>
+            <div class="cta">
+                LEIA:
+                <a href="#">5 coisas que a sua Smart TV sabe sobre você e como se proteger</a>
+            </div>
         </article>
     </main>
 </body>
