figure style e html add

--- a/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
+++ b/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
@@ -58,6 +58,22 @@
                 LEIA:
                 <a href="#">5 coisas que a sua Smart TV sabe sobre você e como se proteger</a>
             </div>
+            <figure>
+                <img src="./images/moedas.png" alt="">
+                <figcaption>Economia de energia depende também dos eletrônicos e eletrodomésticos que você usa — Foto: iStock</figcaption>
+            </figure>
+            <div class="cta">                
+                <a href="#">5 coisas que a sua Smart TV sabe sobre você e como se proteger</a>
+                Veja mais dicas no Fórum do Techtudo
+            </div>
+
+            <h2>1. Geladeira</h2>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+
+            <h2></h2>
         </article>
     </main>
 </body>
