--- a/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
+++ b/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/index.html
@@ -68,12 +68,51 @@
             </div>
 
             <h2>1. Geladeira</h2>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
+            <p>
+                Essencial em nossas vidas, a geladeira ajuda a manter alimentos e bebidas em um bom estado de conservação. Para isso, ela retira o seu calor interno, transferindo-o para a região externa a ela. Esse processo de transformação é bastante custoso porque envolve a transformação de energia elétrica em calor, o que consome bastante luz.
+                
+            </p>
+            <p>
+                Uma geladeira comum, sem ser frost-free, consome em média 93 kWh mensais - ou, de acordo com a calculadora da Enel, cerca de R$ 80 na conta de luz. Dependendo da potência dela e de suas outras características (como, por exemplo, o seu tipo de motor), é possível que esse valor seja maior ou menor. Além de suas especificidades, há ainda outros fatores que podem impactar esse nível de consumo.
 
-            <h2></h2>
+            </p>
+            <p>
+                Como as geladeiras trabalham para manter seu ambiente interior a temperaturas mais baixas, quando abrimos suas portas nós mudamos o seu equilíbrio interno. Isso ocorre por causa da troca direta de calor com o exterior. Segundo o coordenador do programa de energia e sustentabilidade do Instituto Brasileiro de Defesa do Consumidor (Idec), Clauber Leite, quando em excesso, essa ação pode pesar na conta de luz. "Se você abrir e fechar [a geladeira] muitas vezes, mudando esses fatores internos de temperatura, o motor da geladeira vai acionar mais vezes e, consequentemente, vai consumir mais energia", diz.
+
+            </p>
+            <p>
+                Por isso, de acordo com Clauber, o ideal é manter uma relação consciente com a geladeira, abrindo-a apenas quando necessário. Desse modo, para quem deseja economia, aquela clássica história de passar vários minutos com a porta aberta, apenas encarando o interior do eletrodoméstico, também deve ser deixada de lado.
+            </p>
+            <figure>
+                <img src="./images/geladeira.png" alt="">
+                <figcaption>Evite abrir sua geladeira em excesso — Foto: Reprodução/LG</figcaption>
+            </figure>
+            <p>
+                Além disso, o especialista também atenta para as condições da geladeira. Isso porque, caso a borracha da porta esteja com problemas, o eletrodoméstico nunca fechará realmente - o que, consequentemente, causará um consumo ainda maior de luz. Desse modo, é importante prestar atenção ao estado em que estão as peças do aparelho.
+            </p>
+            <p>
+                Clauber Leite lembrou ainda do termostato, que deve ser ajustado de acordo com as condições climáticas de onde moramos. Assim, em dias mais frios, por exemplo, a geladeira pode funcionar a temperaturas mais altas - o que ajuda bastante na economia do final do mês.
+            </p>
+
+            <h2>2. Chuveiro elétrico</h2>
+            <p>
+                Seguindo a mesma lógica da geladeira, o chuveiro elétrico é outro "inimigo" da conta de luz. O motivo é simples: para aquecer a água, o aparelho também precisa converter energia em calor. Como o processo é custoso para o dispositivo, seu consumo energético acaba sendo alto também.
+            </p>
+            <p>
+                Chuveiros elétricos costumam ter potências mais altas do que geladeiras, mantendo-se na casa dos 3500W. Desse modo, se utilizado durante uma hora por dia ao longo do período de um mês, esse dispositivo pode gastar em média 105 kWh - ou seja, teria um impacto de cerca de R$ 90 na conta de luz. De acordo com a potência do chuveiro e com a temperatura utilizada, é possível que esse valor aumente ou diminua.
+            </p>
+
+            <figure>
+                <img src="./images/lore.webp" alt="">
+                <figcaption>Chuveiro elétrico é o eletrodoméstico que mais consome energia — Foto: Foto: Reprodução/Lorenzetti</figcaption>
+            </figure>
+
+            <p>
+                Segundo indicado pelo especialista Clauber Leite o ideal para manter a conta de luz a preços acessíveis é evitar banhos longos, que duram mais de 20 minutos. Isso porque, como explicado anteriormente, quanto mais prolongado for o período de uso, mais energia o dispositivo consome.
+            </p>
+            <p>
+                Além disso, de acordo com o especialista, como boa parte do consumo energético provém da conversão em calor, ajustar o termostato dos chuveiros elétricos já pode ajudar bastante na conta. Desse modo, em dias mais quentes, em que é possível tomar banhos mais frios, mantenha seu dispositivo funcionando em temperaturas mais baixas.
+            </p>
         </article>
     </main>
 </body>
